--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,27 @@
 .header {
     display: flex;
     width: 100%;
-    justify-content: center;
+    height: 80px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .searchMusic {
     display: block;
+    margin-left: 30px;
+    height: 30px;
+    width: 300px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+.button {
+    display: block;
+    height: 50px;
+    width: 100px;
+    font-size: large;
+    margin-right: 20px;
 }
