--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,9 @@
 .header {
     display: flex;
     width: 100%;
-    height: 80px;
+    height: 50px;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     background-color: beige;
 }
 
@@ -12,9 +12,17 @@
     padding: 0;
 }
 
+.configs {
+    display: flex;
+    margin-right: 20px;
+}
+
 .selectGame {
     height:100%;
-    
+}
+
+#header-selected {
+    background-color: cadetblue;
 }
 .game {
     background: none;
@@ -25,6 +33,7 @@
 	cursor: pointer;
 	outline: inherit;
     height: 100%;
+    padding: 0px 20px 0px 20px;
 }
 
 .switchMode {
