--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,40 @@
 .main {
-    width: 100%;
+    display:flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.inputMain {
+    display: flex;
+    padding: 20px;
+    background-color: beige;
+    border-radius: 50px;
+}
+
+.searchPlayer {
+    display: flex;
+    flex-direction: column;
+}
+
+.label {
+    margin: 0px;
+}
+
+.input-name {
+    width: 30vw;
+}
+
+.buttonSearchPlayer {
+
+}
+
+.main-input {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
