--- a/src/pages/Champions/Champions.css
+++ b/src/pages/Champions/Champions.css
@@ -6,12 +6,16 @@ table {
     display: flex;
     width: 100vw;
     justify-content: center;
-    flex-shrink: inherit;
-    flex-grow: 0;
 }
 
 .searchChampion {
     display: flex;
     width: 400px;
     flex-wrap: wrap;
+    align-content: flex-start
+}
+
+.input-searchChampion {
+    width: 100%;
+    height:30px;
 }
