--- a/src/pages/Champions/ChampionButton/ChampionButton.css
+++ b/src/pages/Champions/ChampionButton/ChampionButton.css
@@ -1,13 +1,12 @@
 .link-champion {
-    display: flex;
     flex-direction: column;
-    width: 80px;
-    height: 80px;
     background: none;
     border: none;
+
 }
 
-.championName {
+.a-championName {
+    width: 50px;
     white-space: nowrap;
     font-size: small;
     overflow: hidden;
@@ -15,6 +14,6 @@
 }
 
 .a-championImage{
-    width: 40px;
-    height:40px;
+    width: 50px;
+    height: 50px;
 }
