--- a/src/pages/Champions/Champions.css
+++ b/src/pages/Champions/Champions.css
@@ -10,12 +10,15 @@ table {
 
 .searchChampion {
     display: flex;
-    width: 400px;
+    padding: 10px;
+    width: 330px;
     flex-wrap: wrap;
-    align-content: flex-start
+    justify-content:space-around;
+    align-content: flex-start;
 }
 
 .input-searchChampion {
     width: 100%;
     height:30px;
+    margin-bottom: 10px;
 }
