--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
     height: 50px;
     align-items: center;
     justify-content: space-between;
-    background-color: beige;
+    background-color: #28344E
 }
 
 .config {
@@ -22,11 +22,12 @@
 }
 
 #header-selected {
-    background-color: cadetblue;
+    background-color: #5383E8;
+    color: #FFFFFF;
 }
 .game {
     background: none;
-	color: inherit;
+	color: #A5ACB8;
 	border: none;
 	padding: 0;
 	font: inherit;
